[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
rml = { path = "crates/rml" }
rmlx = { path = "crates/rmlx" }
lexer-core = { path = "crates/lexer-core" }

tokio = { version = "1.48.0", features = ["full", "rt", "macros"] }
tower-lsp = "0.20.0"
url = "2.5.7"
reqwest = "0.12.24"
thiserror = "2.0.17"
enum_dispatch = "0.3.13"
regex = "1.12.2"
pest = "2.8.3"
pest_derive = "2.8.3"