[package]
name = "rmlx"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
lexer-core.workspace = true

tower-lsp.workspace = true
logos.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
reqwest.workspace = true
enum_dispatch.workspace = true

pest = "2.8.2"
pest_derive = "2.8.2"

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "*" }
