[package]
name = "rmlx"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
lexer-core.workspace = true

tower-lsp.workspace = true
logos.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
reqwest.workspace = true
enum_dispatch.workspace = true
regex.workspace = true
pest.workspace = true
pest_derive.workspace = true

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "*" }
