[package]
name = "type-ml-tests"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
type-ml.workspace = true
type-ml-definitions.workspace = true
lexer-core.workspace = true
url.workspace = true


[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "*" }
